# tasogare

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  db.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
