[package]
name = "tasogare"
version = "0.1.0"
description = "Mission Control — focus & engineering session tracker"
authors = ["you"]
edition = "2021"

[lib]
# The _lib suffix avoids a name conflict with the bin target on Windows.
name = "tasogare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
